2009-07-10  Manuel Cerón  <ceronman@gmail.com>

	* ClassDesignerView.cs: It creates class figures now

2009-07-09  Manuel Cerón  <ceronman@gmail.com>

	* MonoDevelop.ClassDesigner.csproj: Updated Project

2009-07-09  Manuel Cerón  <ceronman@gmail.com>

	* MonoDevelop.ClassDesigner.csproj: Project changed

2009-07-09  Manuel Cerón  <ceronman@gmail.com>

	* ClassDesignerView.cs: Moving figure after adding

2009-07-06  Manuel Cerón  <ceronman@gmail.com>

	* Commands.cs:
	* AssemblyInfo.cs:
	* ClassDesignerView.cs:
	* ShowClassDesignerHandler.cs:
	* MonoDevelop.ClassDesigner.csproj:
	* MonoDevelop.ClassDesigner.Figures:
	* MonoDevelop.ClassDesigner.addin.xml: Added new Class
	Designer Addin Project for MonoDevelop
