@@ -1,5 +1,11 @@
 2009-07-10  Manuel Cerón  <ceronman@gmail.com>
 
+	* TypeFigure.cs: Added ContainsPoint and Mame members
+
+	* TypeHeaderFigure.cs: Using a larger font size
+
+2009-07-10  Manuel Cerón  <ceronman@gmail.com>
+
 	* ClassFigure.cs: Rewritten
 
 	* TypeFigure.cs: Rewritten from VStackFigure
