@@ -1,5 +1,9 @@
 2009-07-10  Manuel Cerón  <ceronman@gmail.com>
 
+	* ClassDesignerView.cs: Adding multiple classes
+
+2009-07-10  Manuel Cerón  <ceronman@gmail.com>
+
 	* ClassDesignerView.cs: It creates class figures now
 
 2009-07-09  Manuel Cerón  <ceronman@gmail.com>
